added directions to run from command line