@@ -27,7 +27,8 @@ The application is built using JavaFX.
 * ```mvn clean package install```
 
 ## How to run
-* Launching jar from command line: ```java -jar target/ScrumBoardSimulator-1.0-SNAPSHOT-jar-with-dependencies.jar```
+* For the following ensure module path is the directory to your javafx sdk 17 lib folder.
+* Launching jar from command line: ```java -jar --module-path="D:\java\javafx-sdk-17.0.2\lib" --add-modules=javafx.controls,javafx.fxml,javafx.media target/ScrumBoardSimulator-1.0-SNAPSHOT-jar-with-dependencies.jar```
 * Add the configuration: ![img.png](img.png)
 ## Continuous Integration
 [http://jenkins2.crisp.se/job/betrcode/job/ScrumBoardSimulator/](http://jenkins2.crisp.se/job/betrcode/job/ScrumBoardSimulator/)
